<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dvidal</groupId>
    <artifactId>alexios</artifactId>
    <version>1.0</version>
    <name>Alexios PLE Generator</name>
    <description>Alexios converts google sheets spreadsheets into TXT PLE specification format.</description>
    <packaging>jar</packaging>
    <inceptionYear>2021</inceptionYear>
    <licenses>
        <license>
            <name>GPL v3.0 or Later</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
        </license>
    </licenses>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                        <source>15</source>
                        <target>15</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencies>

    </dependencies>

</project>
